WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83619
CanvasRenderingContext2D does not expose its backing store resolution
https://bugs.webkit.org/show_bug.cgi?id=83619
Summary
CanvasRenderingContext2D does not expose its backing store resolution
mitz
Reported
2012-04-10 14:32:44 PDT
CanvasRenderingContext2D does not expose its backing store resolution
Attachments
Add webkitBackingStorePixelRatio as a read-only attribute to CanvasRenderingContext2D
(6.78 KB, patch)
2012-04-10 14:40 PDT
,
mitz
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-04-10 14:35:35 PDT
<
rdar://problem/10912486
> <
http://lists.whatwg.org/htdig.cgi/whatwg-whatwg.org/2012-March/035112.html
> proposes to expose this using a backingStorePixelRatio attribute.
mitz
Comment 2
2012-04-10 14:40:29 PDT
Created
attachment 136544
[details]
Add webkitBackingStorePixelRatio as a read-only attribute to CanvasRenderingContext2D
mitz
Comment 3
2012-04-10 15:34:04 PDT
Fixed in <
http://trac.webkit.org/r113780
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug